--- a/6-2 定时器外部时钟-按键时钟/Objects/Project.build_log.htm
+++ b/6-2 定时器外部时钟-按键时钟/Objects/Project.build_log.htm
@@ -21,13 +21,33 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-D:\桌面\stm32\5-1 按键控制计次\Project.uvprojx
-Project File Date:  08/31/2023
+d:\桌面\stm32\6-2 定时器外部时钟-按键时钟\Project.uvprojx
+Project File Date:  09/18/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Softs\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+.\Hardware\key.h(14): warning:  #1-D: last line of file ends without a newline
+   
+.\System\Timer.h(12): warning:  #1-D: last line of file ends without a newline
+   
+User\main.c(37): error:  #65: expected a ";"
+  	} 		 
+User\main.c(41): warning:  #1-D: last line of file ends without a newline
+   
+User\main.c: 3 warnings, 1 error
+compiling Timer.c...
+.\System\Timer.h(12): warning:  #1-D: last line of file ends without a newline
+   
+System\Timer.c(17): error:  #136: struct "<unnamed>"  has no field "Alternate"
+      GPIO_InitStructure.Alternate = GPIO_AF2_TIM3;
+System\Timer.c(17): error:  #20: identifier "GPIO_AF2_TIM3" is undefined
+      GPIO_InitStructure.Alternate = GPIO_AF2_TIM3;
+System\Timer.c(62): warning:  #1-D: last line of file ends without a newline
+  }
+System\Timer.c: 2 warnings, 2 errors
+".\Objects\Project.axf" - 3 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -41,7 +61,8 @@ Package Vendor: Keil
   D:\Softs\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Target not created.
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
